--- a/exercises/travel-form/styles.css
+++ b/exercises/travel-form/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -12,13 +13,13 @@ body {
 #content {
     padding: 5%;
     margin: 0 auto;
-    background-color:#eba824;
-    height: 80%;
-    width: 80%;
+    height: auto;
+    width: 100%;
     border-radius: 15px;
     box-shadow: inset 0 0 600px #475c73;
     position: relative;
     top: 9%;
+
 }
 
 h1 {
@@ -26,12 +27,29 @@ h1 {
 }
 
 form {
+    background-color:#eba824;
+    border-radius: 15px;
+    box-shadow: 0 20px 30px -6px black;
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
     text-align: center;
+    padding: 20px;
 }
 
 .formElement {
     margin: 5px;
-    width: 35%;
+    width: 15%;
+    box-shadow: 0 8px 6px -6px black;
+    transition: width 1s, transform 1s, box-shadow 1s, border-radius 1s, border 1s;
+}
+
+.formElement:focus {
+    outline: none;
+    transform: scale(1.1,1.1);
+    width: 150px;
+    box-shadow: 0 6px 20px -4px black;
+    border-radius: 15px;
 }
 
 select {
@@ -40,13 +58,33 @@ select {
 
 input {
     margin: 10px;
-    background-color: #475c73;
+    color: black;
+    border: none;
+
 }
 
 input:focus {
-    outline: none;
+    
 }
 
 #submit {
     box-shadow: 0 8px 6px -6px black;
+    background-color: #475c73;
+    color: white;
+    border-radius: 10px;
+    width: 15%;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+#submit:hover {
+    transform: scale(1.1,1.1);
+    box-shadow: 0 6px 20px -4px black;
+}
+
+#submit:focus {
+    outline: none;
+}
+
+#destination {
+    color: black;
 }
