--- a/projects/css-zen-garden/styles.css
+++ b/projects/css-zen-garden/styles.css
@@ -1,4 +1,4 @@
-* {
+/* * {
 	box-sizing: border-box;
 	margin: 0;
 }
@@ -19,4 +19,18 @@ header {
 	position: fixed;
 	width: 100%;
 	height: 310;
+} */
+
+#row-1 {
+	height: 310px;
+}
+
+.large {
+	background-color: greenyellow;
+	height: 100%;
+}
+
+.small {
+	background-color: orange;
+	height: 100%;
 }
