--- a/projects/css-zen-garden/style.css
+++ b/projects/css-zen-garden/style.css
@@ -34,12 +34,6 @@ body {
         }
     }
 
-    @media (max-width: 430px) {
-        .header {
-
-        }
-    }
-
 .title {
     grid-area: t;
     display: flex;
@@ -55,7 +49,7 @@ body {
 
     @media (max-width: 1131px) {
         .title {
-            background-size: 8%, 8%;
+            background-size: 75px, 75px;
             padding-top: 100px;
             background-position: 50% 10%;
             line-height: 40px;
@@ -194,6 +188,7 @@ a {
     @media (max-width: 432px) {
         .summary {
             max-width: 400px;
+            font-size: 13px;
         }
     }
 
@@ -244,6 +239,13 @@ a {
 
     #li-seven {
         border: none;
+    }
+}
+
+@media (max-width: 482px) {
+    .designs {
+        font-size: .75em;
+        padding: 2%;
     }
 }
 
@@ -326,6 +328,7 @@ a {
     @media (max-width: 432px) {
         .participation {
             max-width: 400px;
+            font-size: 13px;
         }
     }
 
@@ -349,6 +352,13 @@ a {
     font-family: 'Libre Baskerville', sans-serif;
     font-size: 1.3em;
     padding: 100px 0 100px 10px;
+}
+
+@media (max-width: 482px) {
+    .resources {
+        font-size: 1em;
+        padding: 2%;
+    }
 }
 
 .resources > ul {
@@ -428,6 +438,7 @@ a {
     @media (max-width: 432px) {
         .requirements {
             max-width: 400px;
+            font-size: 13px;
         }
     }
 
@@ -464,8 +475,8 @@ a {
 
     @media (max-width: 602px) {
         .author {
-            font-size: 1.5em;
-            padding: 100px;
+            font-size: 1.1em;
+            padding: 2%;
         }
     }
 
@@ -496,8 +507,8 @@ a {
 
 @media (max-width: 896px) {
     .footer {
-        padding-left: 2%;
-        padding-right: 2%;
+        padding-left: 1%;
+        padding-right: 1%;
     }
 }
 
@@ -530,6 +541,11 @@ a {
     left:0;
     text-indent: 0;
     line-height: 1;
+}
+@media (max-width: 459px) {
+    .child::before {
+        font-size: 46px;
+    }
 }
 .html:hover::before, .html:focus::before{
     content: "%";
