--- a/projects/css-zen-garden/style.css
+++ b/projects/css-zen-garden/style.css
@@ -102,9 +102,9 @@ body {
 
     @media (max-width: 1131px) {
         .side {
+            margin-top:60px;
             background-color: rgba(255, 255, 255, 0.3);
             height: 70px;
-            position: absolute;
             top: 240px;
             width: 100%;
         }
