--- a/projects/business-site/media.css
+++ b/projects/business-site/media.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
     height: 100vh;
     background: url(images/wooden-planks.jpg);
-    background-size: 100% 100%;
+    background-size: 90% 90%;
     background-position: top center;
     background-attachment: fixed;
     background-repeat: repeat;
@@ -30,12 +30,12 @@ body {
 .header {
     width: 100%;
     position: fixed;
-    bottom: 90%;
+    top: 0;
     padding: 0 15%;
     font-family: 'Vollkorn', serif;
     font-size: 24px;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 20px 10%;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px 15%;
 }
     @media(max-width: 858px) {
         .header {
@@ -49,20 +49,20 @@ body {
     width: 100%;
     justify-content: space-around;
     padding: 0;
+    
 }
     @media(max-width: 858px) {
         .nav {
             top: 0;
             position: fixed;
-            padding-top: 5%;
+            background-color: rgba(255, 255, 255, 0.8);
         }
     }
     @media(max-width: 541px) {
         .nav {
-            font-size: 14px;
+            font-size: 20px;
             top: 0;
             position: fixed;
-            padding-top: 10%;
         }
     }
 
@@ -78,165 +78,46 @@ body {
     border-radius: 15px;
 }
 
+.nav > li > a:hover {
+    background-color: black;
+    color: white;
+    box-shadow: 0 8px 6px -6px black;
+}
+
 .main {
     overflow: scroll;
     width: 100%;
     height: 100vh;
-    padding: 6%;
+    padding: 7% 4%;
     display: grid;
+    grid-column-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 4px;
 }
+    @media(max-width: 1135px) {
+        .main {
+            padding: 10% 10%;
+        }
+    }
+    @media(max-width: 900px) {
+        .main {
+            grid-template-columns: repeat(2, 1fr);
+            padding: 10% 10%;
+        }
+    }
+    @media(max-width: 561px) {
+        .main {
+            grid-template-columns: 1fr;
+        }
+    }
 
 .pics {
     max-width: 100%;
     height: auto;
-    position: absolute;
+    border: 5px solid white;
 }
 
-#above {
 
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
-
-#above {
-    
-}
 .footer {
     position: fixed;
     bottom: 0;
@@ -244,6 +125,8 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 75px;
 }
 
 .foot {
