--- a/projects/business-site/media.css
+++ b/projects/business-site/media.css
@@ -56,6 +56,8 @@ body {
             top: 0;
             position: fixed;
             background-color: rgba(255, 255, 255, 0.8);
+            height: 75px;
+            line-height: 75px;
         }
     }
     @media(max-width: 541px) {
@@ -105,9 +107,16 @@ body {
             padding: 10% 10%;
         }
     }
+    @media(max-width: 800px) {
+        .main {
+            grid-template-columns: repeat(2, 1fr);
+            padding: 15% 10%;
+        }
+    }
     @media(max-width: 561px) {
         .main {
             grid-template-columns: 1fr;
+            padding: 20% 15%;
         }
     }
 
