--- a/projects/business-site/about.css
+++ b/projects/business-site/about.css
@@ -75,13 +75,13 @@ body {
     color: white;
     padding: 0 15px;
     transition: background-color 0.5s, color 0.5s, box-shadow 1s;
-    border-radius: 15px;
+    border-radius: 5px;
 }
 
 .nav > li > a:hover {
     background-color: white;
     color: black;
-    box-shadow: 0 8px 6px -6px white;
+    box-shadow: 0 8px 6px -6px black;
 }
 
 .main {
