--- a/projects/business-site/contact.css
+++ b/projects/business-site/contact.css
@@ -83,7 +83,7 @@ body {
 
 .nav > li > a {
     text-decoration: none;
-    color: black;
+    color: #353230;
     padding: 0 15px;
     transition: background-color 0.5s, color 0.5s, box-shadow 1s;
     border-radius: 5px;
@@ -96,65 +96,47 @@ body {
 }
 
 .main {
-    overflow: scroll;
-    width: 100%;
-    height: 100vh;
-    padding: 7% 4%;
-    display: grid;
-    grid-column-gap: 20px;
-    grid-row-gap: 5px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 4px;
-    font-family: "Vollkorn", serif;
-    color: #353230;
-}
-    @media(max-width: 1135px) {
-        .main {
-            padding: 10% 10%;
-        }
-    }
-    @media(max-width: 900px) {
-        .main {
-            grid-template-columns: repeat(2, 1fr);
-            padding: 10% 10%;
-        }
-    }
-    @media(max-width: 800px) {
-        .main {
-            grid-template-columns: repeat(2, 1fr);
-            padding: 15% 10%;
-        }
-    }
-    @media(max-width: 561px) {
-        .main {
-            grid-template-columns: 1fr;
-            padding: 20% 15%;
-        }
-    }
-
-.bios {
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 1% 10px;
-    font-size: 18px;
-    border-radius: 5px;
-}
-
-.bios > h1 {
-    font-size: 30px;
-}
-
-.title {
     color: white;
-    font-size: 24;
-    font-style: italic;
+    font-family: 'Vollkorn', serif;
+
 }
 
-.pics {
-    max-width: 50%;
-    height: auto;
-    margin-right: 10px;
-    float: left;
+form {
+    color: white;
+    font-family: 'Vollkorn', serif;
+    font-size: 24px;
+    width: 50%;
+    padding: 1%;
+    text-align: right;
+    box-shadow:         inset 0 0 10px #000000;
     border-radius: 5px;
+}
+@media(max-width: 754px) {
+    form {
+        width: 80%;
+    }
+}
+@media(max-width: 500px) {
+    form {
+        font-size: 18px;
+        width: 90%
+    }
+}
+
+.user {
+    margin: 30px 10px;
+    width: 60%;
+}
+
+/* @media(max-width: 750px) {
+    .user {
+        width: 40%;
+    }
+} */
+
+#submit {
+    margin-right: 40px;
+    margin-bottom: 20px;
 }
 
 
