--- a/exercises/vacation-spots/src/App/Content/Cards/index.css
+++ b/exercises/vacation-spots/src/App/Content/Cards/index.css
@@ -1,7 +1,7 @@
 .cards {
     padding: 50px;
     color: white;
-    width: 50%;
+    width: 45%;
     border: solid 1px white;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     transition: box-shadow 0.3s ease-in-out;
@@ -15,6 +15,6 @@
     }
 
 .cards:hover {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px white;
 }
 
