--- a/exercises/react/blog-props/src/App/BlogList/index.css
+++ b/exercises/react/blog-props/src/App/BlogList/index.css
@@ -1,7 +1,27 @@
 .blogs {
     grid-area: blog;
     height: auto;
-    width: 60%;
+    width: 50%;
     margin-left: 300px;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.button-div {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 50px;
+}
+
+.older-posts {
+    color: white; 
+    border: none;
+    background-color: #0085a1;
+    width: 177px;
+    height: 53px;
+    font-size: 14px;
+}
+
+.older-posts:hover {
+    box-shadow: inset 0 0 0 1000px rgba(6, 6, 7, 0.3);
 }
