--- a/exercises/react/blog-props/src/App/BlogList/index.css
+++ b/exercises/react/blog-props/src/App/BlogList/index.css
@@ -1,11 +1,37 @@
 .blogs {
+    display: flex;
+    flex-direction: column;
     grid-area: blog;
     height: auto;
     width: 50%;
-    margin-left: 300px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 40px 25%;
+    position: relative;
+    z-index: 2;
 }
+    @media(max-width: 1297px) {
+        .blogs {
+            margin: 40px auto;
+            width: 55%;
+        }
+    }
+    @media(max-width: 800px) {
+        .blogs {
+            margin: 40px auto;
+            width: 80%;
+        }
+    }
+    @media(max-width: 1158px) {
+        .blogs {
+            margin: 40px auto;
+            width: 70%;
+        }
+    }
+    @media(max-width: 500px) {
+        .blogs {
+            margin: 40px auto;
+            width: 95%;
+        }
+    }
 
 .button-div {
     display: flex;
@@ -24,4 +50,5 @@
 
 .older-posts:hover {
     box-shadow: inset 0 0 0 1000px rgba(6, 6, 7, 0.3);
+    cursor: pointer;
 }
