--- a/exercises/react/blog-props/src/App/Header/index.css
+++ b/exercises/react/blog-props/src/App/Header/index.css
@@ -4,12 +4,17 @@
     background-image: url("./images/header-bg.jpg");
     background-attachment: scroll;
     background-size: cover;
-    background-position: 0 -215px;
+    background-position: 0 50%;
     background-repeat: no-repeat;
     color: white;
     font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     box-shadow: inset 0 0 0 1000px rgba(6, 6, 7, 0.4);
 }
+    @media(max-width: 740px) {
+        .header {
+            background-size: auto
+        }
+    }
 
 .header > h1 {
     font-size: 80px;
@@ -20,10 +25,23 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 125px;
+    top: 200px;
 }
 
 .header > h3 {
     font-family: 'Open Sans Skinny';
     font-size: 25px;
+}
+
+@media(max-width: 767px) {
+    .header {
+        height: 446px;
+    }
+    .header > h1 {
+        font-size: 50px;
+    }
+    .header > h3 {
+        font-size: 24px;
+        line-height: 1.1;
+    }
 }
