--- a/exercises/react/blog-props/src/App/Header/index.css
+++ b/exercises/react/blog-props/src/App/Header/index.css
@@ -12,7 +12,7 @@
 }
     @media(max-width: 740px) {
         .header {
-            background-size: auto
+            background-size: 150% 150%;;
         }
     }
 
