--- a/projects/react-redux-site/client/src/App/styles/Home.css
+++ b/projects/react-redux-site/client/src/App/styles/Home.css
@@ -19,6 +19,15 @@
     font-family: 'Lato', sans-serif;
 }
 
+@media(max-width: 400px){
+    .home > h1 {
+        font-size: 80px;
+    }
+    .home > h3 {
+        font-size: 20px;
+    }
+}
+
 .home > a {
     color: white;
     text-decoration: none;
@@ -39,6 +48,28 @@
 .search:hover {
     color: black;
     background-color: rgba(255, 255, 255, 0.6);
+}
+
+.lyric-search {
+    height: 35px;
+    width: 100%;
+    margin: 0;
+    padding: 0 20px;
+}
+
+.lyric-search:hover {
+    cursor: pointer;
+}
+
+.err {
+    color: red;
+    font-size: 40px;
+    margin: 20px;
+    font-family: 'Indie Flower', cursive;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 15px;
+    width: 400px;
+    text-align: center;
 }
 
 
