--- a/projects/react-redux-site/client/src/App/styles/Lyrics.css
+++ b/projects/react-redux-site/client/src/App/styles/Lyrics.css
@@ -7,15 +7,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 0;
     font-family: 'Lato', sans-serif;
 }
 
 .lyrics-display {
-    align-self: flex-start;
-    padding: 10px 30%;
+    padding: 10px 0;
+    padding-bottom: 0;
     font-size: 40px;
     overflow: scroll;
+    margin: 20px;
+    margin-bottom: 0;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media(max-width: 775px) {
+    .lyrics-display {
+        width: 95%;
+    }
 }
 
 .lyrics-display > h2 {
@@ -29,4 +40,40 @@
 .lyrics-display > h5 {
     text-align: center;
     font-style: italic
+}
+
+input {
+    width: 200px;
+    outline: none;
+    background-color: white;
+    color: black;
+    height: 30px;
+    margin: 10px 2px;
+    padding: 10px;
+    transition: background-color 1s, color 1s;
+}
+
+
+
+button {
+    width: 100%;
+}
+@media(max-width: 407px) {
+    input{
+        width: 100%;
+    }
+    button {
+        width: 100%;
+    }
+    form {
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+input:focus {
+    background-color: black;
+    color: white;
 }
