--- a/projects/react-redux-site/client/src/App/styles/Lyrics.css
+++ b/projects/react-redux-site/client/src/App/styles/Lyrics.css
@@ -31,11 +31,12 @@
 
 .lyrics-display > h2 {
     text-align: center;
+    font-family: 'Indie Flower', cursive;
 }
 
 .lyrics-display > h4 {
     text-align: center;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Lato', sans-serif;    
 }
 .lyrics-display > h5 {
     text-align: center;
